# PyNoeSmartmeter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/PyNoeSmartmeter/: __init__.py  client.py
src/noe_smartmeter/: __init__.py  client.py
