[tool.poetry]
name = "pynoesmartmeter"
version = "0.3.4"
description = "Python library to access the Netz Nö (EVN) Smart Meter private API"
authors = ["David Illichmann <david.illichmann@ebcont.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
asyncio = "^3.4.3"
httpx = "^0.27.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
